--- a/tools/oversight/rum-slicer.css
+++ b/tools/oversight/rum-slicer.css
@@ -16,15 +16,15 @@
   --light-blue: #cae8ff;
   --medium-blue: #78bbfa;
   --dark-blue: #147af3;
-  --light-fuchsia: #ffdafa;
+  --light-fuchsia: #fff0fc;
   --medium-fuchsia: #f592f3;
-  --dark-fuchsia: #9d039e;
-  --light-purple: #edf;
+  --dark-fuchsia: #7a0279;
+  --light-purple: #f5f0ff;
   --medium-purple: #cca4fd;
-  --dark-purple: #7326d3;
-  --light-indigo: #d3d5ff;
+  --dark-purple: #5a1ba3;
+  --light-indigo: #e8e9ff;
   --medium-indigo: #acafff;
-  --dark-indigo: #4046ca;
+  --dark-indigo: #2c319e;
   --gray-100: #e9e9e9;
   --gray-200: #e1e1e1;
   --gray-300: #dadada;
@@ -459,10 +459,12 @@ figcaption > span {
 .quick-filter {
   padding: 12px 0 8px;
   display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
-.quick-filter input {
-  width: 100%;
+.quick-filter input[type="text"] {
+  flex: 1;
   border: none;
   border-bottom: 2px solid #ccc;
   border-radius: 0;
